--- a/web/pom.xml
+++ b/web/pom.xml
@@ -54,7 +54,7 @@
 			<plugin>
 				<groupId>com.github.trecloux</groupId>
 				<artifactId>yeoman-maven-plugin</artifactId>
-				<version>0.1</version>
+				<version>0.2-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<goals>
@@ -62,6 +62,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<yeomanProjectDirectory>src/main/webapp</yeomanProjectDirectory>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -71,7 +74,7 @@
 				<configuration>
 					<webResources>
 						<resource>
-							<directory>yo/dist</directory>
+							<directory>target/yo-dist</directory>
 						</resource>
 					</webResources>
 					<archive>
