add support for proxy

--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "grunt-karma": "~0.4.3",
     "grunt-open": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
+    "grunt-connect-proxy": "~0.1.5",
     "matchdep": "~0.1.2",
     "connect-livereload": "~0.2.0",
     "grunt-google-cdn": "~0.2.0",
