--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,18 +16,17 @@
 	</properties>
 
 	<dependencies>
-		<!-- <dependency> -->
-		<!-- <groupId>net.awired.ajsl</groupId> -->
-		<!-- <artifactId>ajsl-web</artifactId> -->
-		<!-- <version>0.5-SNAPSHOT</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>net.awired.servlet.sample.html.template</groupId>
+			<artifactId>servlet-sample-html-template</artifactId>
+			<version>0.5-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
-
 
 	<build>
 		<finalName>jaxrs-doc-web</finalName>
-		<sourceDirectory>yo/app</sourceDirectory>
-		<testSourceDirectory>yo/test</testSourceDirectory>
+		<sourceDirectory>src/main/webapp</sourceDirectory>
+		<testSourceDirectory>src/test/webapp</testSourceDirectory>
 
 		<plugins>
 			<plugin>
