--- a/annotations/pom.xml
+++ b/annotations/pom.xml
@@ -5,7 +5,7 @@
 
 
 	<parent>
-		<groupId>net.awired.jaxrs.doc</groupId>
+		<groupId>fr.norad.jaxrs.doc</groupId>
 		<artifactId>jaxrs-doc</artifactId>
 		<version>0.1-SNAPSHOT</version>
 		<relativePath>../</relativePath>
