--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>fr.norad.parent</groupId>
 		<artifactId>parent-java</artifactId>
-		<version>1.17-SNAPSHOT</version>
+		<version>1.18</version>
 	</parent>
 
 	<modules>
