--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<module>annotations</module>
 		<module>core</module>
 		<module>swagger</module>
-		<module>web</module>
+		<module>web-github</module>
 	</modules>
 
 	<scm>
