--- a/web-bootstrap/pom.xml
+++ b/web-bootstrap/pom.xml
@@ -35,7 +35,7 @@
 			<plugin>
 				<groupId>com.github.trecloux</groupId>
 				<artifactId>yeoman-maven-plugin</artifactId>
-				<version>0.2-SNAPSHOT</version>
+				<version>0.1</version>
 				<executions>
 					<execution>
 						<goals>
