--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<maven.version>3.1.0</maven.version>
+		<jackson.version>2.2.2</jackson.version>
 	</properties>
 
 	<modules>
@@ -69,8 +70,14 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>2.2.2</version>
+				<version>${jackson.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.module</groupId>
+				<artifactId>jackson-module-jaxb-annotations</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
 				<artifactId>javax.ws.rs-api</artifactId>
@@ -87,6 +94,8 @@
 				<artifactId>swagger-annotations_2.9.1</artifactId>
 				<version>1.2.5</version>
 			</dependency>
+
+
 
 		</dependencies>
 	</dependencyManagement>
