--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,7 +10,7 @@
 		<version>0.1-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>fr.norad.jaxrs.doc</groupId>
@@ -22,10 +22,15 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jaxb-annotations</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>javax.ws.rs-api</artifactId>
 		</dependency>
-		
+
 		<!-- TODO SUX -->
 		<dependency>
 			<groupId>org.reflections</groupId>
