--- a/web-bootstrap/bower.json
+++ b/web-bootstrap/bower.json
@@ -7,11 +7,11 @@
     "jquery": "~1.9.1",
     "bootstrap-sass": "~2.3.1",
     "es5-shim": "~2.0.8",
-    "angular-route": "1.2.0-rc.1",
     "angular-resource": "1.2.0-rc.1",
     "angular-cookies": "1.2.0-rc.1",
     "angular-sanitize": "1.2.0-rc.1",
     "angular-ui": "~0.4.0",
+    "angular-ui-router": "~0.2.0",
     "angular-bootstrap": "~0.5.0"
   },
   "devDependencies": {
