--- a/pom.xml
+++ b/pom.xml
@@ -1,132 +1,140 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.norad.jaxrs.doc</groupId>
-	<artifactId>jaxrs-doc</artifactId>
-	<version>0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<description>better, faster, stronger swagger like</description>
+    <groupId>fr.norad.jaxrs.doc</groupId>
+    <artifactId>jaxrs-doc</artifactId>
+    <version>0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <description>better, faster, stronger swagger like</description>
 
-	<parent>
-		<groupId>fr.norad.parent</groupId>
-		<artifactId>parent-java</artifactId>
-		<version>1.18</version>
-	</parent>
+    <parent>
+        <groupId>fr.norad.parent</groupId>
+        <artifactId>parent-java</artifactId>
+        <version>1.18</version>
+    </parent>
 
-	<properties>
-		<maven.version>3.1.0</maven.version>
-		<jackson.version>2.2.3</jackson.version>
-	</properties>
+    <properties>
+        <maven.version>3.1.0</maven.version>
+        <jackson.version>2.2.3</jackson.version>
+    </properties>
 
-	<modules>
-		<module>annotations</module>
-		<module>core</module>
-		<module>swagger</module>
-		<module>maven-plugin</module>
-		<!-- <module>web-github</module> -->
-		<module>web-bootstrap</module>
-	</modules>
+    <modules>
+        <module>annotations</module>
+        <module>core</module>
+        <module>swagger</module>
+        <module>maven-plugin</module>
+        <!-- <module>web-github</module> -->
+        <module>web-bootstrap</module>
+    </modules>
 
-	<scm>
-		<connection>scm:git:git://github.com/n0rad/jaxrs-doc.git</connection>
-		<developerConnection>scm:git:git@github.com:n0rad/jaxrs-doc.git</developerConnection>
-		<url>https://github.com/n0rad/jaxrs-doc</url>
-		<tag>HEAD</tag>
-	</scm>
+    <scm>
+        <connection>scm:git:git://github.com/n0rad/jaxrs-doc.git</connection>
+        <developerConnection>scm:git:git@github.com:n0rad/jaxrs-doc.git</developerConnection>
+        <url>https://github.com/n0rad/jaxrs-doc</url>
+        <tag>HEAD</tag>
+    </scm>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>fr.norad.jaxrs.doc</groupId>
-				<artifactId>jaxrs-doc-annotations</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>fr.norad.jaxrs.doc</groupId>
-				<artifactId>jaxrs-doc-core</artifactId>
-				<version>${project.version}</version>
-			</dependency>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>fr.norad.jaxrs.doc</groupId>
+                <artifactId>jaxrs-doc-annotations</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.norad.jaxrs.doc</groupId>
+                <artifactId>jaxrs-doc-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
-			<!-- MAVEN -->
-			<dependency>
-				<groupId>org.apache.maven</groupId>
-				<artifactId>maven-plugin-api</artifactId>
-				<version>${maven.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.maven</groupId>
-				<artifactId>maven-artifact</artifactId>
-				<version>${maven.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.maven.plugin-tools</groupId>
-				<artifactId>maven-plugin-annotations</artifactId>
-				<version>3.2</version>
-			</dependency>
-
-
-
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.module</groupId>
-				<artifactId>jackson-module-jaxb-annotations</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>javax.ws.rs</groupId>
-				<artifactId>javax.ws.rs-api</artifactId>
-				<version>2.0-m10</version>
-			</dependency>
-			<dependency>
-				<groupId>org.reflections</groupId>
-				<artifactId>reflections</artifactId>
-				<version>0.9.9-RC1</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.wordnik</groupId>
-				<artifactId>swagger-annotations_2.9.1</artifactId>
-				<version>1.2.5</version>
-			</dependency>
+            <!-- MAVEN -->
+            <dependency>
+                <groupId>org.apache.maven</groupId>
+                <artifactId>maven-plugin-api</artifactId>
+                <version>${maven.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven</groupId>
+                <artifactId>maven-artifact</artifactId>
+                <version>${maven.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven.plugin-tools</groupId>
+                <artifactId>maven-plugin-annotations</artifactId>
+                <version>3.2</version>
+            </dependency>
 
 
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-jaxb-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
 
-		</dependencies>
-	</dependencyManagement>
+            <!-- VALIDATION -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.1.0.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>5.1.0.Alpha1</version>
+            </dependency>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>0.11.8</version>
-			<scope>provided</scope>
-		</dependency>
+            <dependency>
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>javax.ws.rs-api</artifactId>
+                <version>2.0-m10</version>
+            </dependency>
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>0.9.9-RC1</version>
+            </dependency>
 
-		<!-- TESTS -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-assert-core</artifactId>
-			<version>2.0M8</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.0-rc1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+            <dependency>
+                <groupId>com.wordnik</groupId>
+                <artifactId>swagger-annotations_2.9.1</artifactId>
+                <version>1.2.5</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.11.8</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- TESTS -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert-core</artifactId>
+            <version>2.0M8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0-rc1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
