--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
                 <artifactId>core</artifactId>
                 <version>0.8-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>fr.norad.jaxrs.oauth2</groupId>
+                <artifactId>jaxrs-oauth2-api</artifactId>
+                <version>0.5-SNAPSHOT</version>
+            </dependency>
 
             <!-- VALIDATION -->
             <dependency>
@@ -92,6 +97,11 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>5.1.0.Alpha1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>3.0.0</version>
             </dependency>
 
             <dependency>
