--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
                 <version>3.2</version>
             </dependency>
 
-
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.2</version>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
