--- a/web-bootstrap/pom.xml
+++ b/web-bootstrap/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>fr.norad.jaxrs.doc</groupId>
 		<artifactId>jaxrs-doc</artifactId>
-		<version>0.2</version>
+		<version>0.3-SNAPSHOT</version>
 		<relativePath>../</relativePath>
 	</parent>
 
