--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
             <dependency>
                 <groupId>fr.norad.jaxrs.oauth2</groupId>
                 <artifactId>jaxrs-oauth2-api</artifactId>
-                <version>0.6-SNAPSHOT</version>
+                <version>0.7</version>
             </dependency>
 
             <!-- VALIDATION -->
