--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,12 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>jaxrs-doc-api</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>jaxrs-doc-api</artifactId>
 
-	<parent>
-		<groupId>fr.norad.jaxrs.doc</groupId>
-		<artifactId>jaxrs-doc</artifactId>
-		<version>0.3-SNAPSHOT</version>
-		<relativePath>../</relativePath>
-	</parent>
+    <parent>
+        <groupId>fr.norad.jaxrs.doc</groupId>
+        <artifactId>jaxrs-doc</artifactId>
+        <version>0.3-SNAPSHOT</version>
+        <relativePath>../</relativePath>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>fr.norad.jaxrs.oauth2</groupId>
+            <artifactId>jaxrs-oauth2-api</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
