--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jaxrs-doc-core</artifactId>
@@ -43,10 +44,6 @@
         <dependency>
             <groupId>fr.norad.core</groupId>
             <artifactId>core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.norad.jaxrs.oauth2</groupId>
-            <artifactId>jaxrs-oauth2-api</artifactId>
         </dependency>
 
         <dependency>
