--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jaxrs-doc-core</artifactId>
@@ -7,7 +6,7 @@
     <parent>
         <groupId>fr.norad.jaxrs.doc</groupId>
         <artifactId>jaxrs-doc</artifactId>
-        <version>0.3-SNAPSHOT</version>
+        <version>0.5-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
